Bug 422391 - Crash when using "Save Layer/Mask" on a transform mask
Summary: Crash when using "Save Layer/Mask" on a transform mask
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.3.0-beta2
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-02 20:24 UTC by Anna Medonosova
Modified: 2020-08-28 07:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of the crash (18.98 KB, text/plain)
2020-06-02 20:24 UTC, Anna Medonosova
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2020-06-02 20:24:17 UTC
Created attachment 129006 [details]
backtrace of the crash

SUMMARY
When I try to export a transform mask with "Layer -> Import/Export -> Save Layer/Mask", Krita crashes. Exporting a transparency mask, a colorize mask and a filter mask does not crash.


STEPS TO REPRODUCE
1. Download the test file: https://cgit.kde.org/others/krita-marketing.git/tree/manualdemofiles/clonelayer-transformmasks_azaleas.kra 
2. Open the test file
3. Select a transform mask in the Layers docker
4. Layer -> Import/Export -> Save Layer/Mask

OBSERVED RESULT
Krita crashes, no file is saved.

EXPECTED RESULT
I'm not sure if saving a mask like this is actually expected to work. But it should at least display an error message instead of crashing.
Comment 1 Tiar 2020-07-31 17:55:35 UTC
Looks like no one ever tried to do it - it's not a regression, it crashed Krita even in Krita 4.1.7.
Comment 2 Dmitry Kazakov 2020-08-28 07:28:42 UTC
Git commit 3e89763e6dd757ad7841c299380a46264162b37b by Dmitry Kazakov.
Committed on 28/08/2020 at 07:27.
Pushed by dkazakov into branch 'krita/4.3'.

Fix crash when trying to export Transform Mask

M  +8    -2    libs/ui/kis_node_manager.cpp

https://invent.kde.org/graphics/krita/commit/3e89763e6dd757ad7841c299380a46264162b37b
Comment 3 Dmitry Kazakov 2020-08-28 07:29:35 UTC
Git commit e61d00eb9f10cbc91703d9a3471c73a3e9c20aca by Dmitry Kazakov.
Committed on 28/08/2020 at 07:28.
Pushed by dkazakov into branch 'master'.

Fix crash when trying to export Transform Mask

M  +8    -2    libs/ui/kis_node_manager.cpp

https://invent.kde.org/graphics/krita/commit/e61d00eb9f10cbc91703d9a3471c73a3e9c20aca
Comment 4 Dmitry Kazakov 2020-08-28 07:29:43 UTC
Git commit dbfb6998528b62af0f0fd1762cfba2b471db941f by Dmitry Kazakov.
Committed on 28/08/2020 at 07:29.
Pushed by dkazakov into branch 'master'.

Add a warning when exporting a transform mask

M  +1    -0    libs/ui/kis_node_manager.cpp

https://invent.kde.org/graphics/krita/commit/dbfb6998528b62af0f0fd1762cfba2b471db941f