Fix crash when trying to export Transform Mask

BUG:422391